[gd_scene load_steps=6 format=3 uid="uid://erc05kok8402"]

[ext_resource type="FontFile" uid="uid://ct4y3rnndcu5n" path="res://Assets/Fonts/Rubik/static/Rubik-Medium.ttf" id="1_jyoot"]
[ext_resource type="Script" path="res://Game/UI/big_placement.gd" id="1_uf42a"]
[ext_resource type="FontFile" uid="uid://cdwlkjegxsf3m" path="res://Assets/Fonts/catshop/CatShop.ttf" id="2_k0hfx"]
[ext_resource type="FontFile" uid="uid://bbcr4m4d7iemb" path="res://Assets/Fonts/GreekSprt/NotoSerifDisplay-Medium.ttf" id="3_a8hri"]
[ext_resource type="FontFile" uid="uid://dkfstxdl3jabk" path="res://Assets/Fonts/Rubik/static/Rubik-SemiBold.ttf" id="4_c6t6h"]

[node name="BigPlacement" type="HBoxContainer"]
size_flags_horizontal = 0
theme_override_constants/separation = 30
script = ExtResource("1_uf42a")

[node name="place" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/normal_font = ExtResource("1_jyoot")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "1."
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="FirstSecThird" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="FirstSecThird"]
layout_mode = 2

[node name="ElementName" type="RichTextLabel" parent="FirstSecThird/HBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_k0hfx")
theme_override_fonts/mono_font = ExtResource("3_a8hri")
theme_override_font_sizes/normal_font_size = 45
theme_override_font_sizes/mono_font_size = 45
bbcode_enabled = true
text = "[wave]m[code]Î¾"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Control" type="Control" parent="FirstSecThird/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="player" type="RichTextLabel" parent="FirstSecThird/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/normal_font = ExtResource("1_jyoot")
theme_override_fonts/bold_font = ExtResource("4_c6t6h")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[color=black][pulse][b]SIXTEENCHARACTER"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="IsotopicTier" type="RichTextLabel" parent="FirstSecThird"]
layout_mode = 2
theme_override_colors/default_color = Color(0.168627, 0.176471, 0.2, 1)
theme_override_fonts/normal_font = ExtResource("1_jyoot")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "efficacy: 10000000"
fit_content = true
scroll_active = false

[node name="IsotopeSum" type="RichTextLabel" parent="FirstSecThird"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/default_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/normal_font = ExtResource("1_jyoot")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "(99+99+99)"
fit_content = true
scroll_active = false
autowrap_mode = 0
